don't leak fpstext texture

BUG: 325610
FIXED-IN: 4.11.3
REVIEW: 113136